--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "socket.io-client": "^4.7.2",
     "expo-device": "~5.4.0",
     "react-native-webview": "13.2.2",
-    "expo-clipboard": "~4.3.1"
+    "expo-clipboard": "~4.3.1",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
